--- a/client/assets/scss/main.scss
+++ b/client/assets/scss/main.scss
@@ -1,16 +1,3 @@
-* {
-    user-select: none;
-}
-
-body,
-#main {
-    height: 100vh;
-    width: 100vw;
-    margin: 0;
-
-    .container {
-        height: 100vh;
-        width: 100vw;
-        margin: 0;
-    }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
