--- a/client/src/styles/anagram.scss
+++ b/client/src/styles/anagram.scss
@@ -3,13 +3,20 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100vh;
+    width: 100vh;
+}
+
 body {
     margin: 0;
-    height: 100%;
-    width: 100%;
     background-color: rgb(247, 247, 248);
 
     .content-container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         padding: 50px;
 
         .button {
